# osfabias-engine

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/osfeng/app/: app.h
include/osfeng/math/: matrix4x4.h  quaternion.h  vec2.h  vec3.h
include/osfeng/window/: input.h  sprite.h  window.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/math/: CMakeLists.txt  matrix4x4.cpp  quaternion.cpp  vec2.cpp  vec3.cpp
src/window/: CMakeLists.txt  input.cpp  sprite.cpp  window.cpp
